--- a/src/index.css
+++ b/src/index.css
@@ -64,3 +64,11 @@ body{
     transform: translateX(0px);
   }
 }
+
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #3498db;
+}
