--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -6,12 +6,12 @@
 
 
 body{
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
 }
 
 
 
-
+/* animation */
 .scroll-indicator {
   animation: bounceUpDown 3s infinite alternate;
 }
@@ -27,8 +27,6 @@ body{
     transform: translateY(0);
   }
 }
-
-
 
 .animation-circle  {
   animation: rotation 20s infinite;
@@ -47,7 +45,6 @@ body{
   }
 }
 
-
 .animation-circle-two  {
   animation: rotations 20s infinite;
   background-color: #3B3B3B;
@@ -65,10 +62,11 @@ body{
   }
 }
 
-
+/* scrollbar redesign */
 ::-webkit-scrollbar {
   width: 10px;
 }
+
 ::-webkit-scrollbar-thumb {
   background-color: #3498db;
 }
